[metadata]
name = casm
version = attr: casm.__version__
keywords = container, docker, docker-compose, podman, podman-compose
description = container assembler
author = Mingzhe Zou
author_email = zoumingzhe@outlook.com
url = https://github.com/podboy/casm
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Source Code = https://github.com/podboy/casm
    Bug Tracker = https://github.com/podboy/casm/issues
    Documentation = https://github.com/podboy/casm

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.8
install_requires =
    makefile-help
    xarg-python >= 1.5
    podman_compose >= 1.0.6
packages = find:

[options.entry_points]
console_scripts =
    casm = casm.cmds:main
    cman = casm.cmds.podman:main

[options.packages.find]
where = .
include = casm*
exclude = casm.test
